WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112541
The 'formnovalidate' attribute doesn't work correctly on button elements with child elements
https://bugs.webkit.org/show_bug.cgi?id=112541
Summary
The 'formnovalidate' attribute doesn't work correctly on button elements with...
Kunihiko Sakamoto
Reported
2013-03-18 01:34:54 PDT
https://code.google.com/p/chromium/issues/detail?id=196529
The 'formnovalidate' attribute doesn't work correctly on button elements with child elements
Attachments
Patch
(4.85 KB, patch)
2013-03-18 01:56 PDT
,
Kunihiko Sakamoto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kunihiko Sakamoto
Comment 1
2013-03-18 01:56:18 PDT
Created
attachment 193505
[details]
Patch
Kent Tamura
Comment 2
2013-03-18 04:40:13 PDT
Comment on
attachment 193505
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=193505&action=review
> Source/WebCore/html/HTMLFormElement.cpp:210 > + return static_cast<HTMLFormControlElement*>(node);
Oh, we should have toHTMLFormControlElement(). static_cast<> should be avoided.
WebKit Review Bot
Comment 3
2013-03-18 04:51:17 PDT
Comment on
attachment 193505
[details]
Patch Clearing flags on attachment: 193505 Committed
r146055
: <
http://trac.webkit.org/changeset/146055
>
WebKit Review Bot
Comment 4
2013-03-18 04:51:20 PDT
All reviewed patches have been landed. Closing bug.
Mihai Balan
Comment 5
2013-03-18 05:57:39 PDT
I tried opening the fiddle in Chrome Canary Version 27.0.1443.2 canary - and it crashed the tab. You might want to take a(nother) look at it.
Kunihiko Sakamoto
Comment 6
2013-03-18 18:21:51 PDT
I have tried 27.0.1444.3 canary ant it didn't crash. I believe 27.0.1443.2 canary doesn't include this fix - maybe yow saw a different bug.
Mihai Balan
Comment 7
2013-03-19 01:41:50 PDT
Yeah, might have been a glitch - it doesn't crash on Canary 27.0.1444.3 for me neither
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug